# OpenEnv-E-Commerce-Environment

./: LICENSE
openenv-project/: Dockerfile  README.md  app.py  benchmark.py  inference.py  openenv.yaml  pyproject.toml  test_step.py
openenv-project/openenv_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
openenv-project/server/: app.py  env.py  grader.py  tasks.py
openenv-project/server/data/: catalog.json
openenv-project/server/tests/: test_api.py  test_logic.py
